# my-shared-lib

./: meson.build  my-executable.c  my-shared-lib.c  my-shared-lib.def
